# taxi-simple-cli

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  PassengerServiceHandler.cpp  PassengerServiceHandler.h  README  README.md  argvcharsetconv.cpp  argvcharsetconv.h  client.cpp  client.h  config.h.in  configure  configure.ac  platform.h  svc-nonblocking.cpp  taxi-simple-cli.cpp  taxi-simple-cli.h  taxi-simple-svc.cpp  utiltime.cpp  utiltime.h
Debug/: cl.command.1.tlog  link.command.1.tlog  mt.command.1.tlog  rc.command.1.tlog
Debug/taxi-simple-svc.tlog/: cl.command.1.tlog  link.command.1.tlog
Release/: cl.command.1.tlog  link.command.1.tlog  mt.command.1.tlog
Release/taxi-simple-svc.tlog/: cl.command.1.tlog  link.command.1.tlog
thrift/: PassengerService.cpp  PassengerService.h  PassengerService_server.skeleton.cpp  taxi_constants.cpp  taxi_constants.h  taxi_types-odb.cxx  taxi_types-odb.hxx  taxi_types-odb.ixx  taxi_types.cpp  taxi_types.h
